2002-07-24  Chris Blumenberg  <cblu@apple.com>

	Implemented initial contextual menus. None activated yet.

        * WebView.subproj/WebDefaultContextMenuHandler.h:
        * WebView.subproj/WebDefaultContextMenuHandler.m:
        (-[WebDefaultContextMenuHandler dealloc]): added
        (-[WebDefaultContextMenuHandler addMenuItemWithTitle:action:toArray:]): added
        (-[WebDefaultContextMenuHandler contextMenuItemsForElementInfo:defaultMenuItems:]): create menu items
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView menuForEvent:]): 

2002-07-24  Chris Blumenberg  <cblu@apple.com>

	More renaming for WebDefaultPolicyHandler.

        * WebView.subproj/WebController.m:
        (-[WebController policyHandler]):
        * WebView.subproj/WebDefaultPolicyHandler.h:
        * WebView.subproj/WebDefaultPolicyHandler.m:

2002-07-24  Chris Blumenberg  <cblu@apple.com>

	Renamed WebDefaultControllerPolicyHandler to WebDefaultPolicyHandler.

        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebDefaultControllerPolicyHandler.h: Removed.
        * WebView.subproj/WebDefaultControllerPolicyHandler.m: Removed.
        * WebView.subproj/WebDefaultPolicyHandler.h: Added.
        * WebView.subproj/WebDefaultPolicyHandler.m: Added.
        (-[WebDefaultControllerPolicyHandler initWithWebController:]):
        (-[WebDefaultControllerPolicyHandler URLPolicyForURL:]):
        (-[WebDefaultControllerPolicyHandler fileURLPolicyForMIMEType:dataSource:isDirectory:]):
        (-[WebDefaultControllerPolicyHandler unableToImplementFileURLPolicy:forDataSource:]):
        (-[WebDefaultControllerPolicyHandler requestContentPolicyForMIMEType:dataSource:]):
        (-[WebDefaultControllerPolicyHandler unableToImplementURLPolicyForURL:error:]):
        (-[WebDefaultControllerPolicyHandler unableToImplementContentPolicy:forDataSource:]):
        (-[WebDefaultControllerPolicyHandler pluginNotFoundForMIMEType:pluginPageURL:]):
